# QtVTKDemo

./: CMakeLists.txt  README.md
src/: ReadDICOMSeries.h  ct.cpp  ct.h  ct.qrc  ct.ui  main.cpp
